added project showcase in homepage and removed feed links

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 ---
 layout: default
 ---
-
-<div class="home">
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-
+<div class="container-fluid">
+  <div class="col col-md-4">
+    <img src="http://placehold.it/400x225">
+    <p>Project #1</p>
+  </div>
+  <div class="col col-md-4">
+    <img src="http://placehold.it/400x225">
+    <p>Project #2</p>
+  </div>
+  <div class="col col-md-4">
+    <img src="http://placehold.it/400x225">
+    <p>Project #3</p>
+  </div>
 </div>
