Restyled index to have centered images, added container to about.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 ---
 layout: default
 ---
-<div class="container-fluid">
+<div class="container-fluid project-title home">
+  <h1 class="page-heading">Most interesting projects</h1>
   <div class="col col-md-4">
-    <img src="http://placehold.it/400x225">
+    <img class="center" src="http://placehold.it/400x225">
     <p>Project #1</p>
   </div>
   <div class="col col-md-4">
-    <img src="http://placehold.it/400x225">
+    <img class="center" src="http://placehold.it/400x225">
     <p>Project #2</p>
   </div>
   <div class="col col-md-4">
-    <img src="http://placehold.it/400x225">
+    <img class="center" src="http://placehold.it/400x225">
     <p>Project #3</p>
   </div>
 </div>
