--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 title: About
 ---
 
-<div class="home">
+<div class="home container">
 
   <h1 class="page-heading">About</h1>
   <div class="about-content">
