Changed page layouts, added CNAME file, fixed styling

--- a/about.html
+++ b/about.html
@@ -2,12 +2,10 @@
 layout: default
 title: About
 ---
-
-<div class="home container">
-
-  <h1 class="page-heading">About</h1>
-  <div class="about-content">
-    About me, myself and I.
-  </div>
-
+<div class="wrapper">
+	<h1 class="page-heading">About</h1>
+	<div class="about-content">
+	Hi, my name is Giacomo "Jack" Camporini, I'm currently studying Game Design at the HanzeHogeschool of Groningen, I enjoy developing videogames, I love to see games evolving from their design process into the development phase and then final product. I am currently focusing on learning design patterns and architecture design, in order to get my projects' workflow to a satisfying speed/quality ratio.
+	I am currently working on university projects, while in my free time I try to experiment new techniques on small projects.
+	</div>
 </div>
